[build-system]
requires = ["setuptools", "wheel", "pybind11~=2.11.1"]
build-backend = "setuptools.build_meta"

[project]
name = 'matid'
version = '2.0.0.dev1'
description = 'MatID is a Python package for identifying and analyzing atomistic systems based on their structure.'
readme = "README.md"
authors = [{ name = "Lauri Himanen" }]
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "ase",
    "scipy",
    "spglib>=1.15.0",
    "scikit-learn",
    "networkx>=2.4",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ['atoms', 'structure', 'materials', 'science', 'crystal', 'symmetry']

[project.urls]
Documentation = 'https://nomad-coe.github.io/matid/'
Source = "https://github.com/nomad-coe/matid"

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "black",
    "pydoc-markdown"
]

[tool.setuptools.packages.find]
include = ["matid*"]
exclude = ["tests*"]
