[build-system]
requires = ["setuptools", "wheel", "pybind11~=2.11.1"]
build-backend = "setuptools.build_meta"

[project]
name = 'matid'
version = '2.1.0'
description = 'MatID is a Python package for identifying and analyzing atomistic systems based on their structure.'
readme = "README.md"
authors = [{ name = "Lauri Himanen" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy<2.0.0",
    "ase",
    "scipy",
    "spglib>=1.15.0",
    "scikit-learn",
    "networkx>=2.4",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ['atoms', 'structure', 'materials', 'science', 'crystal', 'symmetry']

[project.urls]
Documentation = 'https://nomad-coe.github.io/matid/'
Source = "https://github.com/nomad-coe/matid"

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "ruff",
    "pydoc-markdown",
    "genbadge[coverage]",
]

[tool.setuptools.packages.find]
include = ["matid*"]
exclude = ["tests*"]

[tool.ruff]
include = ["matid/*.py", "tests/*.py"]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
]
ignore = [
    "E501", # Line too long ({width} > {limit} characters)
    "E701", # Multiple statements on one line (colon)
    "E731", # Do not assign a lambda expression, use a def
    "E402", # Module level import not at top of file
    "W605", # Invalid escape sequence
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
]
fixable = ["ALL"]

[tool.ruff.format]
# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
